@@ -1,6 +1,8 @@
 Release 0.6.4 (in development)
 ==============================
 
+* #299: Fix the mangling of quotes in some literal blocks.
+
 * #292: Fix path to the search index for the ``dirhtml`` builder.
 
 * Fix a Jython compatibility issue: make the dependence on the
